--- a/Lab1/report.tex
+++ b/Lab1/report.tex
@@ -57,6 +57,7 @@
 \section*{Connecting the Oscilloscope}
 To connect the osciiloscope to function generator properly do the following -
 \begin{itemize}
+    \item Turn on oscilloscope, 
     \item Connect one probe (probe A) to the wire connected to the output terminal of Channel 1 in function generator, and connect the ground of the probe A to the ground of channel 1, do the same to the second probe (probe B).
     \item Set both the probes to 10x condition and in the oscilloscope. 
     \item Use the triggering feature to lock the waveform for analysis.
