lab 1 report draft (2)

--- a/Lab1/report.tex
+++ b/Lab1/report.tex
@@ -111,21 +111,24 @@ The shape of the Lissajous figure is determined by the type of waveforms $x\brak
     \hspace{\fill}
     {\includegraphics[ width=0.31\textwidth]{./figs/fig2_verify.png}}\\
     \caption{Lissajous Plot 2}
-\end{figure*}\begin{figure*}[ht!]
+\end{figure*}
+\begin{figure*}[ht!]
     {\includegraphics[ width=0.31\textwidth]{./figs/data3_crop.png}}
     \hspace{\fill}
     {\includegraphics[ width=0.31\textwidth]{./figs/fig3_crop.png}}
     \hspace{\fill}
     {\includegraphics[ width=0.31\textwidth]{./figs/fig3_verify.png}}\\
     \caption{Lissajous Plot 3}
-\end{figure*}\begin{figure*}[ht!]
+\end{figure*}
+\begin{figure*}[ht!]
     {\includegraphics[ width=0.31\textwidth]{./figs/data4_crop.png}}
     \hspace{\fill}
     {\includegraphics[ width=0.31\textwidth]{./figs/fig4_crop.png}}
     \hspace{\fill}
     {\includegraphics[ width=0.31\textwidth]{./figs/fig4_verify.png}}\\
     \caption{Lissajous Plot 4}
-\end{figure*}\begin{figure*}[ht!]
+\end{figure*}
+\begin{figure*}[ht!]
     {\includegraphics[ width=0.31\textwidth]{./figs/data5_crop.png}}
     \hspace{\fill}
     {\includegraphics[ width=0.31\textwidth]{./figs/fig5_crop.png}}
@@ -140,6 +143,12 @@ The shape of the Lissajous figure is determined by the type of waveforms $x\brak
     \hspace{\fill}
     {\includegraphics[ width=0.31\textwidth]{./figs/fig6_verify.png}}\\
     \caption{Lissajous Plot 6}
+\end{figure*}
+\begin{figure*}[ht!]
+    {\includegraphics[ width=0.5\textwidth]{./figs/one_time_data_crop.jpeg}}
+    \hspace{\fill}
+    {\includegraphics[ width=0.5\textwidth]{./figs/one_time_fig.jpeg}}
+    \caption{One-Time Event Plot}
 \end{figure*}
 
 \section{Discussion}
