--- a/Lab2/report.tex
+++ b/Lab2/report.tex
@@ -43,30 +43,31 @@ The governing equation for the voltage $V_C(t)$ across the capacitor in an RC ci
     RC \frac{dV_C}{dt} + V_C &= V_{\text{in}}, \\
     \frac{dV_C}{dt} + \frac{V_C}{RC} &= \frac{V_{\text{in}}}{RC}.
 \end{align}
-For a square wave input, $V_{\text{in}}(t)$ alternates between two levels (e.g., $V_0$ and $-V_0$) with a period $T$. The response depends on the relationship between $T$ and $RC$. Let:
+For a square wave input, $V_{\text{in}}(t)$ alternates between two levels (e.g., $V_0$ and $-V_0$) with a period $T$. The response depends on the relationship between $T$ and $RC$.
+
+\section{Numerical Solution Using the Trapezoidal Method}
+To solve the governing differential equation numerically, we employ the trapezoidal method. The Python implementation simulates the circuit response to a square wave input.\newline
+According to trapezoidal rule
 \begin{align}
-    V_{\text{in}}\brak{t} =a_0+\sum_{n=1}^{\infty}\brak{a_n \cos\brak{\frac{2\pi nt}{T}}+b_n\sin\brak{\frac{2\pi nt}{T}}}
+  y_{n+1}&=y_n+\frac{1}{2}h\brak{f(t_n,y_{n}) + f(t_{n+1},y_{n+1})}\\
+  f(t_n, y_n) &= \frac{1}{RC}(V_{in}(t_n) - V_{C}(y_n))\\
+  V_{C}(y_{n+1})&=V_{C}(y_n)+\frac{1}{2}h (\frac{1}{RC}(V_{in}(t_n) - V_{C}(y_n))+\frac{1}{RC}(V_{in}(t_{n+1}) - V_{C}(y_{n+1})))\\
+  V_{C}(y_{n+1})&=V_{C}(y_n)+\frac{h}{2RC}((V_{in}(t_n) - V_{C}(y_n))+(V_{in}(t_{n+1}) - V_{C}(y_{n+1})))\\
+  (1+\frac{h}{2RC})(V_{C}(y_{n+1})) &= V_C(y_n)+\frac{h}{2RC}(V_{in}(t_n)+V_{in}(t_{n+1})- V_{C}(y_n))
 \end{align}
-As $V_{in}$ is a square, it will be in form $V_{in} = V_{dc} + V_{ac}$.\newline If the amplitude of $V_{in}$ is $5V$, then the average value of $V_{in}$ is  $\frac{1}{T}\brak{\int_{0}^{T}V_{in}dt} = \frac{5}{2}$. The value of $V_{dc} = \frac{5}{2}$.\newline
-As $V_{ac}$ is an odd function, it will only contain sine terms
+We will get the expression
 \begin{align}
-	 V_{\text{in}}\brak{t} =a_0+\sum_{n=1}^{\infty}b_n\sin\brak{\frac{2\pi nt}{T}}
+	(V_{C}(y_{n+1})) &= \frac{V_C(y_n)+\frac{h}{2RC}(V_{in}(t_n)+V_{in}(t_{n+1})- V_{C}(y_n))}{1+\frac{h}{2RC}}
 \end{align}
-The values of $b_n$ can be calculated as
-\begin{align}
-	b_n &= \frac{2}{T}\brak{\int_{\frac{T}{2}}^{-\frac{T}{2}}V_{in}\brak{t}\sin\brak{\frac{2\pi nt}{T}}dt}\\
-	b_n &= \frac{2}{T}\brak{\int_{0}^{\frac{T}{2}}V_0 \sin\brak{\frac{2\pi nt}{T}}dt + \int_{\frac{T}{2}}^{0}\brak{-V_0}\sin\brak{\frac{2\pi nt}{T}}dt}		
-\end{align}
-For even $n$, the terms cancel out, for odd $n$ the terms add up giving
-\begin{align}
-	b_n &= \frac{4V_0}{T}\brak{\int_{0}^{\frac{T}{2}}\sin\brak{\frac{2\pi nt}{T}}dt} \qquad \brak{\text{for odd n}}\\
-	b_n &= \frac{4V_0}{n\pi}
-\end{align}
-This gives
-\begin{align}
-	V_{in}\brak{t} &= a_0 + \frac{4V_0}{\pi}\brak{\sum_{n = 1,3,5,\dots}^{\infty}\frac{1}{n}\sin\brak{\frac{2\pi nt}{T}}}\\
-	V_{in}\brak{t} &= \frac{5}{2} + \frac{10}{\pi}\brak{\sin\brak{\frac{2\pi t}{T}}+\frac{1}{3}\sin\brak{\frac{6\pi t}{T}}+\frac{1}{5}\sin\brak{\frac{10\pi t}{T}}+\dots}
-\end{align}
+\subsection{Explanation of the Code}
+The Python code above simulates the response of an RC circuit to a square wave input. Key steps include:
+\begin{itemize}
+    \item Defining circuit parameters such as resistance, capacitance, and time step size.
+    \item Generating a square wave function for the input voltage.
+    \item Implementing the trapezoidal method to numerically integrate the differential equation governing the RC circuit.
+    \item Updating the capacitor voltage iteratively using past and present input values.
+    \item Plotting the results to visualize the circuit response.
+\end{itemize}
 \section{Analysis}
 \subsection{Case 1: $T \gg RC$}
 When the period of the square wave is much greater than the time constant ($T \gg RC$), the capacitor has sufficient time to fully charge and discharge during each half-cycle. The output voltage $V_C(t)$ closely follows the input signal, with exponential transitions between $V_0$ and $-V_0$. The response can be expressed as:
@@ -78,16 +79,13 @@ When the period of the square wave is much greater than the time constant ($T \g
 \end{align}
 
 \subsection{Case 2: $T = RC$}
-When the period of the square wave is comparable to the time constant ($T \approx RC$), the capacitor does not fully charge or discharge during each half-cycle. The output voltage exhibits noticeable attenuation and rounded transitions, reflecting an intermediate behavior.
+When the period of the square wave is comparable to the time constant ($T \approx RC$), the capacitor does not fully charge or discharge during each half-cycle. The output voltage exhibits noticeable attenuation and rounded transitions, reflecting an intermediate behavior. Inititally we will have the transient response but it will become 0 eventually
 
 \subsection{Case 3: $T \ll RC$}
-For a square wave with a period much smaller than the time constant ($T \ll RC$), the capacitor cannot respond significantly within a single cycle. The output voltage $V_C(t)$ remains nearly constant, approximating the average value of the input signal. This behavior effectively acts as a low-pass filter, smoothing the square wave into a nearly constant DC level.
-
-\section{Discussion}
-The response of the RC circuit demonstrates its filtering properties, with the time constant $RC$ acting as a key determinant. For $T \gg RC$, the circuit behaves like a buffer, closely following the input. For $T \ll RC$, it acts as a low-pass filter, suppressing high-frequency components.
+For a square wave with a period much smaller than the time constant ($T \ll RC$), the capacitor cannot respond significantly within a single cycle. The output voltage $V_C(t)$ remains nearly constant, approximating the average value of the input signal. This behavior effectively acts as a low-pass filter, smoothing the square wave into a nearly constant DC level as time progress. Initially, it will grow to a certain value and then oscillates near that level 
 
 \section{Conclusion}
-The analysis reveals the versatility of RC circuits in signal processing applications. By adjusting the time constant relative to the input signal's period, the circuit can function as a buffer, an attenuator, or a low-pass filter. This makes RC circuits fundamental in both analog and digital electronics.
+The analysis and numerical simulation confirm that the RC circuit behaves as a filter when subjected to a square wave input. Depending on the relationship between $T$ and $RC$, the circuit either follows the input closely, exhibits attenuation, or behaves as a low-pass filter. The numerical solution using the trapezoidal method effectively captures these behaviors and provides insights into the circuit's transient response.
 
 \end{document}
 
