--- a/Lab3/report.tex
+++ b/Lab3/report.tex
@@ -52,15 +52,7 @@ RC circuits, consisting of a resistor and a capacitor in series, exhibit dynamic
     \end{circuitikz}
     \caption{RC Circuit with a 5V Square Wave Input}
 \end{figure}
-The governing equation for the voltage $V_C(t)$ across the capacitor in an RC circuit with input voltage $V_{\text{in}}(t)$ is:
-\begin{align}
-    iR + \frac{q}{C} &= V_{\text{in}}, \\
-    V_C &= \frac{q}{C}, \\
-    RC \frac{dV_C}{dt} + V_C &= V_{\text{in}}, \\
-    \frac{dV_C}{dt} + \frac{V_C}{RC} &= \frac{V_{\text{in}}}{RC}.
-\end{align}
-For a square wave input, $V_{\text{in}}(t)$ alternates between two levels (e.g., $V_0$ and $-V_0$) with a period $T$. The response depends on the relationship between $T$ and $RC$.
-
+The reactance of a capacitor with capacitance $C$ is given by 
 \section{Procedure}
 
 \begin{enumerate}
