--- a/Lab3/report.tex
+++ b/Lab3/report.tex
@@ -82,6 +82,7 @@ The function to be plotted in bode plot for the Amplitude will be
 \begin{align}
 	y = -10\log(1+10^{2x}R^2C^2)
 \end{align}
+just checking
 \section{Procedure}
 
 \begin{enumerate}
