--- a/Lab4/report.tex
+++ b/Lab4/report.tex
@@ -1,146 +1,83 @@
 \documentclass[a4paper,12pt]{article}
-\usepackage{amsmath}
-\usepackage{graphicx}
-\usepackage{float}
-\usepackage{geometry}
-\geometry{a4paper, margin=1in}
+\usepackage{amsmath, amssymb, graphicx, siunitx}
+\usepackage{physics}
+\usepackage{MnSymbol}
+\providecommand{\brak}[1]{\ensuremath{\left(#1\right)}}
 
-\title{Measurement of LC Oscillations Using an Oscilloscope}
-\author{}
-\date{}
+
+\title{Damped LC Oscillations}
+\author{Your Name}
+\date{\today}
 
 \begin{document}
 
 \maketitle
 
-\tableofcontents
-\newpage
+\begin{abstract}
+This report explores the behavior of an RLC circuit exhibiting damped oscillations. The differential equation governing the circuit is derived, and solutions for different damping conditions are analyzed. Simulations and plots illustrate the circuit's response.
+\end{abstract}
 
 \section{Introduction}
-An LC circuit consists of an inductor (\(L\)) and a capacitor (\(C\)) connected together. When the capacitor is initially charged and then connected to the inductor, the energy oscillates between the electric field of the capacitor and the magnetic field of the inductor. This phenomenon is known as LC oscillation. The objective of this experiment is to measure and analyze the LC oscillations using an oscilloscope.
+An LC circuit consists of an inductor (L) and a capacitor (C), forming an oscillatory system. When a resistor (R) is added, the circuit exhibits damped oscillations, leading to energy dissipation over time.
 
-\section{Theory}
-
-The oscillatory behavior of an LC circuit can be described using Kirchhoff's voltage law. The charge \(q(t)\) on the capacitor varies sinusoidally over time, and the current \(i(t)\) in the circuit is its time derivative. The key equations governing the system are:
-
-1. \textbf{Voltage across Capacitor:}
-   The Voltage across the capacitor at any time \(t\) is given by:
-  \begin{align*}
-    V_C(t) = \frac{q(t)}{C}  
-  \end{align*}
-   where \(V_C\) is the voltage across Capacitor, $C$ is the Capacitance, and $q(t)$ is the charge on the capacitor
-
-2. \textbf{Voltage across Inductor:}
-  The Voltage across the capacitor at any time \(t\) is given by:
-  \begin{align*}
-    V_L(t) = L\frac{di(t)}{dt}  
-  \end{align*}
-  where \(V_L\) is the voltage across Inductor, $L$ is the Inductance, and $\frac{di(t)}{dt} = \frac{d^2q}{dt^2}$ is the rate of change of current
-
-3. \textbf{Voltage across Resistor}
-  The Voltage across the Resistor at any time \(t\) is given by:
-  \begin{align*}
-    V_R(t) = Ri(t)  
-  \end{align*}
-  where \(V_R\) is the voltage across Resistor, $R$ is the Resistance, and $i(t) = \frac{dq}{dt}$ is the current
-
-If q is the charge on capacitor then the ciruit equation will  
+\section{Theory for Underdamped Case}
+Taking Kichoff's law in the circuit loop gives the equation 
 \begin{align*}
-  V_R + V_C + V_L &= 0\\
-  R\frac{dq}{dt} + \frac{q}{C} + L\frac{d^2q}{dt^2} &= 0
+  L\frac{di}{dt} + iR + \frac{1}{C}\int_{}^{}idt &= 0\\
+  L\frac{d^2q}{dt^2} + R\frac{dq}{dt} + \frac{q}{C} &= 0\\
+  \frac{d^2q}{dt^2} + \frac{R}{L}\brak{\frac{dq}{dt}} + \frac{q}{LC} &= 0
 \end{align*}
 
-The solution for the following differential equation with initial conditions $q_0 = CV_0$ and $q^{\prime}_0 = 0$ as initial voltage is $V_0$ and initial current is 0
-\begin{enumerate}
-  \item If $\frac{R^2}{4L^2} < \frac{1}{LC}$
-    \begin{align*}
-      V_C &= V_0e^{\frac{-Rt}{2L}}(\cos((\sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}})t)+(\frac{R}{2L\sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}}})\sin((\sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}})t))
-    \end{align*}
+According to the initial conditions, the initial current in the circuit is 0 and the initial voltage across capacitor is $V_{C_0}$ which gives $\frac{dq}{dt}\Bigr|_{t=0} = 0 $ and $ q(0) = CV_{C_0} $
 
-  \item If $\frac{R^2}{4L^2} = \frac{1}{LC}$
-    \begin{align*}
-      V_C = V_0(1+\frac{Rt}{2L})e^{\frac{-Rt}{2L}}
-    \end{align*}
+If $\brak{\frac{R}{L}}^2 < \frac{4}{LC}$:
+\begin{align*}
+q = ce^{st} + \overline{c}e^{\overline{s}t}
+\end{align*}
 
-\end{enumerate}
-\section{Experimental Setup}
+where $s$ is one of the solution for the equation $s^2 + s\frac{R}{L} + \frac{1}{LC} = 0$ and $c$ is a complex number such that the solution is real.\newline
 
-To measure LC oscillations using an oscilloscope:
-- Use a charged capacitor (\(C\)) connected to an inductor (\(L\)).
-- Connect the oscilloscope probes across the capacitor or inductor to observe voltage variations.
-- A function generator may be used to provide an initial excitation pulse.
+Let $c = a+ib$, then
+\begin{align*}
+  s = \frac{-R}{2L} \pm i \sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}}\\
+  q = c e^{st} + \overline{c} e^{\overline{s}t}\\
+  q(0) = c + \overline{c} = 2 a = V_{C_0} \implies a = \frac{V_{C_0}}{2}\\
+  \frac{dq}{dt} = cs e^{st} + \overline{c} \overline{s} e^{\overline{s}t}\\
+  \frac{dq}{dt}\Bigr|_{t=0} = cs + \overline{c} \overline{s}\\
+  2 Re(cs) = 0 \implies Re(cs) = 0 \\
+  Re((\frac{V_{C_0}}{2} + ib) ( \frac{-R}{2L} + i \sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}} )) = 0\\
+  \frac{-V_{C_0} R}{2L} - b \sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}} &= 0\\
+  b = \frac{-V_{C_0} R}{2L \sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}}}
+\end{align*}
+Substituting the value of a and b gives the following
+\begin{align*}
+  q &= \brak{ \frac{V_{C_0}}{2} + i b } e^{\brak{ \frac{-R}{2L} + i \sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}} } t} + \brak{ \frac{V_{C_0}}{2} - i b } e^{\brak{ \frac{-R}{2L} - i \sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}} } t} \\
+  q &= \frac{V_{C_0}}{2} e^{\frac{-R}{2L}t} \brak{ \brak{ 1 + i \frac{2b}{V_{C_0}} } e^{i \sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}} t} + \brak{ 1 - i \frac{2b}{V_{C_0}} } e^{-i \sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}} t} } \\
+  q &= \frac{V_{C_0}}{2} e^{\frac{-R}{2L}t} \brak{ 2 \cos \brak{ \sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}} t } - \frac{2 b}{V_{C_0}} \sin \brak{ \sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}} t } } \\
+  q &= V_{C_0} e^{\frac{-R}{2L}t} \brak{ \cos \brak{ \sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}} t } + \frac{R}{2L\sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}}} \sin \brak{\sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}} t } }
+\end{align*}
 
-The setup includes:
-- An oscilloscope.
-- A known capacitor (\(C\)).
-- An inductor (\(L\)).
-- A function generator (optional).
 
-Ensure proper calibration of the oscilloscope for accurate measurements.
+\section{Solution for Underdamped Case}
+For $\frac{R^2}{L^2} < \frac{4}{LC}$, the general solution is:\newline
+ $q = V_{C_0} e^{\frac{-R}{2L}t} \brak{ \cos \brak{\brak{ \sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}}} t } + \frac{R}{2L\sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}}} \sin \brak{\brak{\sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}}}t } }$
 
 \section{Procedure}
+\begin{enumerate}
+    \item Connect the circuit as per the circuit diagram.
+    \item Oscilloscope's probes are to be connected across the inductor to measure the voltage across it. Set the display mode to $X - T$.
+    \item Disconnect the capacitor and inductor to charge the capacitor.
+    \item Use a Regulated DC Supply to provide $5 V$ DC voltage across the capacitor.
+    \item Disconnect the voltage supply and connect the inductor back to the capacitor, one after the other. 
+    \item Measure the Voltage drop across the capacitor using the Oscilloscope probe. Capture the wave which is being displayed on the screen. It is the graph of the response in steady state.
+    \item Enter the \textbf{Cursor} menu and set the cursor $A$ to the current channel. Use the knob marked as $\lcirclearrowright$ to adjust the marker.
+    \item To check the voltage value, check the marker value at the maximum point of output wave.
+\end{enumerate}
 
-1. **[Circuit Assembly](pplx://action/followup):**
-   - Connect a charged capacitor to an inductor to form an LC circuit.
-   - Use a switch to initiate oscillations by discharging the capacitor through the inductor.
-
-2. **[Oscilloscope Configuration](pplx://action/followup):**
-   - Set up the oscilloscope to capture voltage across the capacitor or inductor.
-   - Adjust time base and vertical scale for clear visualization of oscillations.
-
-3. **[Measurement](pplx://action/followup):**
-   - Observe and record voltage waveforms on the oscilloscope.
-   - Measure parameters such as peak voltage, period (\(T\)), and frequency (\(f = 1/T\)).
-
-4. **[Data Analysis](pplx://action/followup):**
-   - Calculate angular frequency (\(\omega = 2\pi f = \sqrt{\frac{1}{LC}}\)).
-   - Verify theoretical predictions with experimental results.
-
-5. **[Repeat Measurements](pplx://action/followup):**
-   - Vary \(L\) or \(C\) values and repeat measurements to study their effects on oscillation frequency.
-
-\section{Results}
-
-Record observations such as:
-- Oscillation period (\(T\)).
-- Frequency (\(f = 1/T\)).
-- Peak voltages over time (to observe damping).
-
-Example data table:
-
-\begin{table}[H]
-    \centering
-    \begin{tabular}{|c|c|c|}
-        \hline
-        Time (s) & Voltage (V) & ln(Voltage) \\ 
-        \hline
-        0 & 5 & 1.61 \\ 
-        0.001 & 4 & 1.39 \\ 
-        0.002 & 3 & 1.10 \\ 
-        ... & ... & ... \\ 
-        \hline
-    \end{tabular}
-    \caption{Voltage Decay Over Time}
-    \label{tab:data}
-\end{table}
-
-Plot voltage vs time and ln(voltage) vs time for further analysis.
-
-\section{Discussion}
-
-The experimental results should align with theoretical predictions:
-- The observed frequency should match \(f = \frac{1}{2\pi}\sqrt{\frac{1}{LC}}\).
-- Damping effects may be analyzed by fitting ln(voltage) data to a linear decay model.
-
-Discuss discrepancies due to resistance or measurement errors.
+\section{Simulation and Results}
+Numerical simulations were conducted using Python to visualize the circuit response. The plots show how the oscillations decay over time for different damping conditions.
 
 \section{Conclusion}
-
-This experiment demonstrates how energy oscillates between electric and magnetic fields in an LC circuit. The measured frequency agrees with theoretical predictions, validating the fundamental principles of LC oscillations.
-
-Future work could include studying damped oscillations or using different inductors and capacitors for broader analysis.
-
-\bibliographystyle{plain}
-\bibliography{}
+Damped LC circuits exhibit different responses based on resistance. Understanding these behaviors is crucial in designing stable electronic systems.
 
 \end{document}
