--- a/Lab4/report.tex
+++ b/Lab4/report.tex
@@ -20,8 +20,8 @@
 \providecommand{\brak}[1]{\ensuremath{\left(#1\right)}}
 \geometry{a4paper, margin=1in}
 
-\title{Damped LC Oscillations}
-\author{Your Name}
+\title{Damped LC 
+\author{Abhimanyu Koushik \brak{\text{EE24BTECH11024}},\\Agamjot Singh \brak{\text{EE24BTECH11002}}\\IIT Hyderabad}Oscillations}
 \date{\today}
 
 \begin{document}
@@ -29,7 +29,7 @@
 \maketitle
 
 \begin{abstract}
-This report explores the behavior of an RLC circuit exhibiting damped oscillations. The differential equation governing the circuit is derived, and solutions for different damping conditions are analyzed. Simulations and plots illustrate the circuit's response.
+    This report explores the behavior of an RLC circuit exhibiting damped oscillations. The differential equation governing the circuit is derived, and solutions for different damping conditions are analyzed. Simulations and plots illustrate the circuit's response.
 \end{abstract}
 
 \section{Introduction}
@@ -37,57 +37,71 @@ An LC circuit consists of an inductor (L) and a capacitor (C), forming an oscill
 
 \section{Theory for Underdamped Case}
 \begin{figure*}[h]
-\begin{center}
-\begin{circuitikz}
-\draw
-(0,0) to[C, l=$C$] (0,3)
-to (3,3)
-to[R, l=$R$] (3,1.5)
-to[L, l=$L$] (3,0)
-to (0,0);
-\end{circuitikz}
-\end{center}
+    \begin{center}
+        \begin{circuitikz}
+            \draw
+            (0,0) to[C, l=$C$] (0,3)
+            to (3,3)
+            to[R, l=$R$] (3,1.5)
+            to[L, l=$L$] (3,0)
+            to (0,0);
+        \end{circuitikz}
+    \end{center}
 \end{figure*}
 Taking Kirchhoff's law in the circuit loop gives the equation 
 \begin{align*}
-  L\frac{di}{dt} + iR + \frac{1}{C}\int_{}^{}idt &= 0\\
-  L\frac{d^2q}{dt^2} + R\frac{dq}{dt} + \frac{q}{C} &= 0\\
-  \frac{d^2q}{dt^2} + \frac{R}{L}\brak{\frac{dq}{dt}} + \frac{q}{LC} &= 0
+    L\frac{di}{dt} + iR + \frac{1}{C}\int_{}^{}idt &= 0\\
+    L\frac{d^2q}{dt^2} + R\frac{dq}{dt} + \frac{q}{C} &= 0\\
+    \frac{d^2q}{dt^2} + \frac{R}{L}\brak{\frac{dq}{dt}} + \frac{q}{LC} &= 0
 \end{align*}
+\newpage
+This equation can be written as,
+\begin{align}
+    \frac{d^2q}{dt^2} + 2\xi\omega_{n}\brak{\frac{dq}{dt}} + \omega_{n}\frac{q}{LC} &= 0
+\end{align}
+where $\xi$ is the damping factor, $\xi = \frac{R}{2}\sqrt{\frac{C}{L}}$, and $\omega_{n}$ is the natural frequency, $\omega_{n} = \frac{1}{\sqrt{LC}}$.
+\newline
 
-According to the initial conditions, the initial current in the circuit is 0 and the initial voltage across capacitor is $V_{C_0}$ which gives $\frac{dq}{dt}\Bigr|_{t=0} = 0 $ and $ q(0) = CV_{C_0} $
+According to the initial conditions, the initial current in the circuit is 0 and the initial voltage across capacitor is $V_{C_0}$ which gives $\frac{dq}{dt}\Bigr|_{t=0} = 0 $ and $q(0) = CV_{C_0}$.
 
-If $\brak{\frac{R}{L}}^2 < \frac{4}{LC}$:
+The solution to the given differential equation can be given by,
 \begin{align*}
-q = ce^{st} + \overline{c}e^{\overline{s}t}
+    q = c_1e^{s_1 t} + {c_2} e^{s_2 t}
 \end{align*}
 
-where $s$ is one of the solution for the equation $s^2 + s\frac{R}{L} + \frac{1}{LC} = 0$ and $c$ is a complex number such that the solution is real.\newline
+where $s_1, s_2$ are the solutions for the quadratic equation $s^2 + 2\xi\omega_{n}s + \brak{\omega_{n}}^2 = 0$ and $c_1, c_2$ are constants.
+
+For an underdamped system ($\xi < 1$),
+\begin{align}
+    s_2 &= {s_1}^{\ast} = s^{\ast}\\
+    c_2 &= {c_1}^{\ast} = c^{\ast}\\
+    \implies q &= ce^{st} + c^{\ast}e^{s^{\ast}t}
+\end{align}
 
 Let $c = a+ib$, then
 \begin{align*}
-  s = \frac{-R}{2L} \pm i \sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}}\\
-  q = c e^{st} + \overline{c} e^{\overline{s}t}\\
-  q(0) = c + \overline{c} = 2 a = V_{C_0} \implies a = \frac{V_{C_0}}{2}\\
-  \frac{dq}{dt} = cs e^{st} + \overline{c} \overline{s} e^{\overline{s}t}\\
-  \frac{dq}{dt}\Bigr|_{t=0} = cs + \overline{c} \overline{s}\\
-  2 Re(cs) = 0 \implies Re(cs) = 0 \\
-  Re((\frac{V_{C_0}}{2} + ib) ( \frac{-R}{2L} + i \sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}} )) = 0\\
-  \frac{-V_{C_0} R}{2L} - b \sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}} &= 0\\
-  b = \frac{-V_{C_0} R}{2L \sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}}}
+    s = \frac{-R}{2L} \pm i \sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}}\\
+    q = c e^{st} + \overline{c} e^{\overline{s}t}\\
+    q(0) = c + \overline{c} = 2 a = V_{C_0} \implies a = \frac{V_{C_0}}{2}\\
+    \frac{dq}{dt} = cs e^{st} + \overline{c} \overline{s} e^{\overline{s}t}\\
+    \frac{dq}{dt}\Bigr|_{t=0} = cs + \overline{c} \overline{s}\\
+    2 Re(cs) = 0 \implies Re(cs) = 0 \\
+    Re((\frac{V_{C_0}}{2} + ib) ( \frac{-R}{2L} + i \sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}} )) = 0\\
+    \frac{-V_{C_0} R}{2L} - b \sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}} &= 0\\
+    b = \frac{-V_{C_0} R}{2L \sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}}}
 \end{align*}
 Substituting the value of a and b gives the following
 \begin{align*}
-  q &= \brak{ \frac{V_{C_0}}{2} + i b } e^{\brak{ \frac{-R}{2L} + i \sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}} } t} + \brak{ \frac{V_{C_0}}{2} - i b } e^{\brak{ \frac{-R}{2L} - i \sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}} } t} \\
-  q &= \frac{V_{C_0}}{2} e^{\frac{-R}{2L}t} \brak{ \brak{ 1 + i \frac{2b}{V_{C_0}} } e^{i \sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}} t} + \brak{ 1 - i \frac{2b}{V_{C_0}} } e^{-i \sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}} t} } \\
-  q &= \frac{V_{C_0}}{2} e^{\frac{-R}{2L}t} \brak{ 2 \cos \brak{ \sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}} t } - \frac{2 b}{V_{C_0}} \sin \brak{ \sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}} t } } \\
-  q &= V_{C_0} e^{\frac{-R}{2L}t} \brak{ \cos \brak{ \sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}} t } + \frac{R}{2L\sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}}} \sin \brak{\sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}} t } }
+    q &= \brak{ \frac{V_{C_0}}{2} + i b } e^{\brak{ \frac{-R}{2L} + i \sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}} } t} + \brak{ \frac{V_{C_0}}{2} - i b } e^{\brak{ \frac{-R}{2L} - i \sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}} } t} \\
+    q &= \frac{V_{C_0}}{2} e^{\frac{-R}{2L}t} \brak{ \brak{ 1 + i \frac{2b}{V_{C_0}} } e^{i \sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}} t} + \brak{ 1 - i \frac{2b}{V_{C_0}} } e^{-i \sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}} t} } \\
+    q &= \frac{V_{C_0}}{2} e^{\frac{-R}{2L}t} \brak{ 2 \cos \brak{ \sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}} t } - \frac{2 b}{V_{C_0}} \sin \brak{ \sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}} t } } \\
+    q &= V_{C_0} e^{\frac{-R}{2L}t} \brak{ \cos \brak{ \sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}} t } + \frac{R}{2L\sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}}} \sin \brak{\sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}} t } }
 \end{align*}
 
 
 \section{Solution for Underdamped Case}
 For $\frac{R^2}{L^2} < \frac{4}{LC}$, the general solution is:\newline
- $q = V_{C_0} e^{\frac{-R}{2L}t} \brak{ \cos \brak{\brak{ \sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}}} t } + \frac{R}{2L\sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}}} \sin \brak{\brak{\sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}}}t } }$
+$q = V_{C_0} e^{\frac{-R}{2L}t} \brak{ \cos \brak{\brak{ \sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}}} t } + \frac{R}{2L\sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}}} \sin \brak{\brak{\sqrt{\frac{1}{LC} - \frac{R^2}{4L^2}}}t } }$
 
 \section{Procedure}
 \begin{enumerate}
