--- a/Lab7/report.tex
+++ b/Lab7/report.tex
@@ -230,12 +230,15 @@ void setup() {
 }
 
 void loop() {
-  digitalWrite(13, HIGH);  // Set pin 13 HIGH
+  digitalWrite(13, LOW);  // Set pin 13 LOW
   delay(500);             // Wait for 500 milliseconds
-  digitalWrite(13, LOW);   // Set pin 13 LOW
+  digitalWrite(13, HIGH); // Set pin 13 HIGH
   delay(500);             // Wait for 500 milliseconds
 }
 \end{verbatim}
+\FloatBarrier
+
+This generates a clock signal with time period $= 1$s.
 
 \section{Results}
 \subsection{LED States}
